update alignment issues

--- a/src/assets/css/sass/core/base.scss
+++ b/src/assets/css/sass/core/base.scss
@@ -419,7 +419,9 @@ p {
 .text-theme-3 {
   color: $theme-color-3 !important;
 }
-
+.text-theme-6 {
+  color: $theme-color-6 !important;
+}
 .text-primary,
 .text-theme-1 {
   color: $theme-color-1 !important;
